Design Category Navbar Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
+<app-category-navbar></app-category-navbar>
+
 <h1>Angular Blog App</h1>
 
 <router-outlet></router-outlet>
