Design Footer Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <app-category-navbar></app-category-navbar>
 
-<h1>Angular Blog App</h1>
-
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
