--- a/src/styles.css
+++ b/src/styles.css
@@ -29,5 +29,10 @@ body {
   color: var(--primary-color);
 }
 
+.shadow-effect {
+  box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
+  border: none !important;
+}
+
 
 
