Design Home Page

--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -13,8 +13,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur. Faucibus egestas auctor tristique
       vitae risus. Et ut proin quam ut. Justo non habitant euismod pharetra quis
-      tempus scelerisque tempus. Dis nunc felis pretium aliquam vestibulum
-      mauris aliquet.
+      tempus scelerisque tempus.
     </p>
     <small class="bg-light text-warning text-center ml-3"
     >LAST UPDATED - SEP 20, 2023</small
