--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,54 @@
-<p>home works!</p>
+<!--Featured Section-->
+<section class="featured-section">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 text-center mt-5">
+        <h2 class="text-white">FEATURED POSTS</h2>
+        <p class="text-white">Lorem ipsum dolor sit amet consectetur. Amet tincidunt urna quis elit.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!--Latest Section-->
+<section class="container-fluid  mt-5">
+  <div class="col-md-12 text-center">
+    <h2>LATEST POSTS</h2>
+    <p>Lorem ipsum dolor sit amet consectetur. Nulla nec sit fusce ac.</p>
+  </div>
+  <div class="row">
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</section>
