Design Single Category Page

--- a/src/app/pages/single-category/single-category.component.html
+++ b/src/app/pages/single-category/single-category.component.html
@@ -1,1 +1,29 @@
-<p>single-category works!</p>
+<div class="bg-theme p-5">
+  <div class="container">
+    <h1 class="text-white">GENERAL KNOWLEDGE</h1>
+    <p class="text-white">Lorem ipsum dolor sit amet consectetur. Nunc semper rhoncus ultrices</p>
+  </div>
+</div>
+
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-md-4 mb-4">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mb-4">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mb-4">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mb-4">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mb-4">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mb-4">
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</div>
