Design Single Post Page

--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,83 @@
-<p>single-post works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <img
+        alt="post"
+        class="img-fluid"
+        src="https://cdn.pixabay.com/photo/2014/09/24/14/29/macbook-459196_1280.jpg"
+      />
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-md-8">
+      <div class="card shadow-effect">
+        <!--        <img-->
+        <!--          alt="post"-->
+        <!--          src="https://cdn.pixabay.com/photo/2014/09/24/14/29/macbook-459196_1280.jpg"-->
+        <!--        />-->
+        <div class="card-body">
+          <small class="bg-light text-danger text-center">Design</small>
+          <small class="bg-light text-success text-center ml-2">Featured</small>
+          <small class="bg-light text-info text-center ml-2"
+          >Views - 100,250</small
+          >
+          <small class="bg-light text-warning text-center ml-2">
+            LAST UPDATED - SEP 20, 2023
+          </small>
+
+          <h1 class="mt-3 mb-3">
+            HOW TO START A BLOG 2023 EDITED NEW CATEGORY
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Enim lacus in viverra enim
+            volutpat duis mauris eget. Hendrerit sed id nulla etiam massa.
+            Aliquam elementum quis justo imperdiet urna enim neque. Sed nunc nec
+            sit id elit sodales leo ac. In augue suspendisse diam odio aliquam
+            in tristique malesuada. Ultricies pellentesque cursus risus dictumst
+            sit. Enim sed consectetur tempor aliquet id. Volutpat sit ac magna
+            imperdiet risus habitasse. Ornare imperdiet dictumst dui et egestas
+            lacinia augue. Massa donec est pellentesque viverra amet odio
+            consectetur dapibus. Egestas rhoncus viverra sed habitant eget
+            posuere malesuada egestas. Ac ac interdum est elementum justo. Vitae
+            ipsum aliquet senectus tortor convallis. Feugiat facilisis velit
+            semper pulvinar dui ut amet diam elementum. Condimentum dictum
+            tortor sed nec cras leo morbi. Tellus id eu ut tristique rhoncus.
+            Dignissim sem habitant neque elit. Vitae feugiat nunc amet volutpat
+            ut a nisi. Non dictum fermentum volutpat est elit facilisis. Nec
+            urna adipiscing aenean a odio pulvinar. Id eu risus dolor et
+            tincidunt. Lectus in pulvinar eget feugiat nibh hendrerit leo.
+            Ultrices commodo orci mattis donec rhoncus lacinia ac accumsan
+            luctus. Sed sed sit dis tempus scelerisque cursus eget ultrices.
+            Ullamcorper accumsan cursus montes semper turpis. In scelerisque
+            fermentum montes tellus. Vitae aenean ipsum neque diam blandit nunc
+            aliquet duis imperdiet. A amet at est faucibus laoreet. Vulputate
+            integer nunc feugiat donec amet odio aliquam magna urna. Augue
+            ornare molestie cursus ullamcorper a tincidunt. Suspendisse eros
+            amet a mauris dolor nisl tortor pharetra commodo. Porttitor lobortis
+            maecenas integer vel urna. Ante quam enim at a. Eget ut pellentesque
+            elit pellentesque. Eget mattis lacus gravida turpis sem aliquam eget
+            morbi. Molestie in ac purus pretium commodo nulla faucibus bibendum.
+            Ultricies a lacus nec id nec maecenas ullamcorper. Vestibulum vel
+            mauris commodo est nisi morbi sagittis. Quam faucibus aenean pretium
+            ullamcorper risus. Sociis enim interdum vitae turpis lacus dui.
+            Vulputate vel nisl amet imperdiet at auctor in aliquam id. Ipsum
+            interdum phasellus aliquam in consequat semper. Et diam orci dolor
+            ultricies nulla. Pellentesque aliquam enim ligula id et vitae lacus
+            vitae nunc.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="mb-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="mb-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="mb-3">
+        <app-post-card></app-post-card>
+      </div>
+    </div>
+  </div>
+</div>
