--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -15,8 +15,8 @@
       vitae risus. Et ut proin quam ut. Justo non habitant euismod pharetra quis
       tempus scelerisque tempus.
     </p>
-    <small class="bg-light text-warning text-center ml-3"
-    >LAST UPDATED - SEP 20, 2023</small
-    >
+    <small class="bg-light text-warning text-center ml-3">
+      LAST UPDATED - SEP 20, 2023
+    </small>
   </div>
 </div>
