--- a/src/app/comments/comment-form/comment-form.component.html
+++ b/src/app/comments/comment-form/comment-form.component.html
@@ -1,1 +1,29 @@
-<p>comment-form works!</p>
+<div class="card mt-5 shadow-effect">
+  <div class="card-body">
+    <h4>Leave a Comment</h4>
+    <p>You can leave your comment by using this comment form</p>
+
+    <form>
+      <div class="form-group">
+        <label>Name</label>
+        <input
+          class="form-control shadow-effect"
+          placeholder="Enter your name here"
+          type="text"
+        />
+      </div>
+
+      <div class="form-group">
+        <label>Comment</label>
+        <textarea
+          class="form-control shadow-effect"
+          cols="30"
+          placeholder="Add your comment here"
+          rows="10"
+        ></textarea>
+      </div>
+
+      <button class="btn btn-info btn-theme">Add Comment</button>
+    </form>
+  </div>
+</div>
