--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -11,10 +11,6 @@
   <div class="row mt-5">
     <div class="col-md-8">
       <div class="card shadow-effect">
-        <!--        <img-->
-        <!--          alt="post"-->
-        <!--          src="https://cdn.pixabay.com/photo/2014/09/24/14/29/macbook-459196_1280.jpg"-->
-        <!--        />-->
         <div class="card-body">
           <small class="bg-light text-danger text-center">Design</small>
           <small class="bg-light text-success text-center ml-2">Featured</small>
@@ -67,6 +63,8 @@
           </p>
         </div>
       </div>
+
+      <app-comment-form></app-comment-form>
     </div>
     <div class="col-md-4">
       <div class="mb-3">
