Design Comment Form List Component

--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -64,8 +64,13 @@
         </div>
       </div>
 
+      <!-- Comments Form     -->
       <app-comment-form></app-comment-form>
+      <!--  Comments List    -->
+      <app-comment-list></app-comment-list>
     </div>
+
+    <!-- Related Posts   -->
     <div class="col-md-4">
       <div class="mb-3">
         <app-post-card></app-post-card>
