--- a/src/app/comments/comment-list/comment-list.component.html
+++ b/src/app/comments/comment-list/comment-list.component.html
@@ -1,1 +1,45 @@
-<p>comment-list works!</p>
+<div class="card mb-5 mt-5 pb-5 shadow-effect">
+  <div class="card-body">
+    <h4 class="mt-3 mb-3">Comments (12,345)</h4>
+
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">John Doe</h6>
+      <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
+        mauris purus non. Interdum tellus ornare enim proin nulla tristique
+        ullamcorper nibh.
+      </div>
+
+      <a class="mt-1" href="#">Reply</a>
+      <a class="mt-1 ml-3" href="#">View Reply</a>
+    </div>
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">John Doe</h6>
+      <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
+        mauris purus non. Interdum tellus ornare enim proin nulla tristique
+        ullamcorper nibh.
+      </div>
+
+      <a class="mt-1" href="#">Reply</a>
+      <a class="mt-1 ml-3" href="#">View Reply</a>
+    </div>
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">John Doe</h6>
+      <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
+        mauris purus non. Interdum tellus ornare enim proin nulla tristique
+        ullamcorper nibh.
+      </div>
+
+      <a class="mt-1" href="#">Reply</a>
+      <a class="mt-1 ml-3" href="#">View Reply</a>
+    </div>
+  </div>
+</div>
