--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,44 @@
-<p>about-us works!</p>
+<section class="mt-5">
+  <div class="container mt-5 mb-5 p-5 bg-theme">
+    <h1 class="text-white text-center">ABOUT US</h1>
+    <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+      <p>
+        Lorem ipsum dolor sit amet consectetur. Mi nibh nisl nullam diam arcu.
+        Nisl pellentesque quisque orci ultrices ligula platea nisl. Lorem mauris
+        nunc consectetur et urna amet aliquet. Viverra commodo tortor vulputate
+        eget nulla varius enim. Tellus mauris hendrerit ornare nunc sit vel ut
+        lacinia at. Bibendum cum ut sit massa nullam massa bibendum pulvinar.
+        Sapien erat nunc libero lorem sagittis molestie vitae non neque. Sit
+        tempus nec hendrerit porta risus aliquet vel. Lacus neque dolor non enim
+        scelerisque tortor amet sapien. Duis lorem ultrices ut tristique est
+        tincidunt vehicula. Posuere ultricies nullam habitant sed adipiscing ac.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur. Mi nibh nisl nullam diam arcu.
+        Nisl pellentesque quisque orci ultrices ligula platea nisl. Lorem mauris
+        nunc consectetur et urna amet aliquet. Viverra commodo tortor vulputate
+        eget nulla varius enim. Tellus mauris hendrerit ornare nunc sit vel ut
+        lacinia at. Bibendum cum ut sit massa nullam massa bibendum pulvinar.
+        Sapien erat nunc libero lorem sagittis molestie vitae non neque. Sit
+        tempus nec hendrerit porta risus aliquet vel. Lacus neque dolor non enim
+        scelerisque tortor amet sapien. Duis lorem ultrices ut tristique est
+        tincidunt vehicula. Posuere ultricies nullam habitant sed adipiscing ac.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur. Mi nibh nisl nullam diam arcu.
+        Nisl pellentesque quisque orci ultrices ligula platea nisl. Lorem mauris
+        nunc consectetur et urna amet aliquet. Viverra commodo tortor vulputate
+        eget nulla varius enim. Tellus mauris hendrerit ornare nunc sit vel ut
+        lacinia at. Bibendum cum ut sit massa nullam massa bibendum pulvinar.
+        Sapien erat nunc libero lorem sagittis molestie vitae non neque. Sit
+        tempus nec hendrerit porta risus aliquet vel. Lacus neque dolor non enim
+        scelerisque tortor amet sapien. Duis lorem ultrices ut tristique est
+        tincidunt vehicula. Posuere ultricies nullam habitant sed adipiscing ac.
+      </p>
+
+      <div class="text-center">
+        <button class="btn btn-info btn-sm mt-4 btn-theme">Back To Home</button>
+      </div>
+    </div>
+  </div>
+</section>
