--- a/backend/src/app/layouts/header/header.component.html
+++ b/backend/src/app/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg fixed-top bg-white">
+<header class="navbar navbar-expand-lg fixed-top bg-white shadow-effect">
   <div class="container justify-content-center">
     <a class="site-logo" href="#">ANG_BLOG</a>
   </div>
