--- a/backend/src/app/categories/categories.component.html
+++ b/backend/src/app/categories/categories.component.html
@@ -1,1 +1,18 @@
-<p>categories works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 bg-secondary-theme p-5 shadow-effect">
+      <h3 class="text-center text-theme-primary">New Categories</h3>
+      <p class="text-center">You can add new Categories from here!</p>
+
+      <form class="form-inline text-center">
+        <div class="form-group col-md-9">
+          <input type="text" placeholder="Add new categories" class="form-control shadow-effect w-100"/>
+        </div>
+
+        <div class="form-group col-md-3">
+          <button class="btn btn-info btn-block btn-theme">Add New Category</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
