--- a/backend/src/styles.css
+++ b/backend/src/styles.css
@@ -57,5 +57,5 @@ input[type = text], input[type = email] {
   height: 58px;
   border: none;
   font-size: 13px;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color) !important;
 }
