--- a/backend/src/app/categories/categories.component.html
+++ b/backend/src/app/categories/categories.component.html
@@ -4,13 +4,21 @@
       <h3 class="text-center text-theme-primary">New Categories</h3>
       <p class="text-center">You can add new Categories from here!</p>
 
-      <form class="form-inline text-center">
+      <form class="form-inline text-center" #categoryForm='ngForm' (ngSubmit)="onSubmit(categoryForm)">
         <div class="form-group col-md-9">
-          <input type="text" placeholder="Add new categories" class="form-control shadow-effect w-100"/>
+          <input
+            type="text"
+            placeholder="Add new categories"
+            class="form-control shadow-effect w-100"
+            name="category"
+            ngModel
+          />
         </div>
 
         <div class="form-group col-md-3">
-          <button class="btn btn-info btn-block btn-theme">Add New Category</button>
+          <button class="btn btn-info btn-block btn-theme">
+            Add New Category
+          </button>
         </div>
       </form>
     </div>
