--- a/backend/src/app/categories/categories.component.html
+++ b/backend/src/app/categories/categories.component.html
@@ -12,11 +12,17 @@
             class="form-control shadow-effect w-100"
             name="category"
             ngModel
+            #newCategory='ngModel'
+            required
+            [ngClass]="{'is-invalid': newCategory.touched && newCategory.invalid}"
           />
+          <div class="alert alert-danger w-100" *ngIf="newCategory.touched && newCategory.invalid">
+            Category field is required
+          </div>
         </div>
 
         <div class="form-group col-md-3">
-          <button class="btn btn-info btn-block btn-theme">
+          <button class="btn btn-info btn-block btn-theme" [disabled]="categoryForm.invalid">
             Add New Category
           </button>
         </div>
