--- a/backend/src/styles.css
+++ b/backend/src/styles.css
@@ -31,7 +31,7 @@ body {
 
 .shadow-effect {
   box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
-  border: none !important;
+  border: none;
 }
 
 .bg-theme {
