--- a/backend/src/styles.css
+++ b/backend/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap");
+
+/*regular style toast*/
+@import "ngx-toastr/toastr";
 
 :root {
   --primary-color: #026467;
@@ -9,7 +12,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 12px;
   color: var(--body-text-color);
 }
@@ -46,7 +49,8 @@ body {
   color: var(--primary-color);
 }
 
-input[type = text], input[type = email] {
+input[type="text"],
+input[type="email"] {
   height: 60px;
   padding-left: 20px;
   font-size: 13px;
