--- a/backend/src/app/dashboard/dashboard.component.html
+++ b/backend/src/app/dashboard/dashboard.component.html
@@ -9,5 +9,14 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4 mb-5">
+      <div class="card shadow-effect">
+        <div class="card-body text-center bg-secondary-theme" routerLink="posts">
+          <h1 class="text-theme-primary mt-3"><i class="fa-solid fa-file-image"></i></h1>
+          <h2 class="text-theme-primary">Posts</h2>
+          <p>Manage your posts here</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
