--- a/backend/src/styles.css
+++ b/backend/src/styles.css
@@ -34,7 +34,7 @@ body {
 
 .shadow-effect {
   box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
-  border: none;
+  border: none !important;
 }
 
 .bg-theme {
@@ -42,7 +42,7 @@ body {
 }
 
 .bg-secondary-theme {
-  background-color: var(--secondary-color);
+  background-color: var(--secondary-color) !important;
 }
 
 .text-theme-primary {
@@ -58,7 +58,6 @@ input[type="email"] {
 }
 
 .btn-theme {
-  height: 58px;
   border: none;
   font-size: 13px;
   background-color: var(--primary-color) !important;
