--- a/backend/src/app/posts/new-post/new-post.component.html
+++ b/backend/src/app/posts/new-post/new-post.component.html
@@ -13,12 +13,23 @@
           <div class="card-body">
             <div class="form-group">
               <label>Title</label>
-              <input type="text" class="form-control"/>
+              <input
+                type="text"
+                class="form-control"
+                (keyup)="onTitleChange($event)"
+                name="title"
+              />
             </div>
 
             <div class="form-group">
               <label>Permalink</label>
-              <input type="text" class="form-control"/>
+              <input
+                type="text"
+                class="form-control"
+                [(ngModel)]="permalink"
+                name="permalink"
+                disabled
+              />
             </div>
 
             <div class="form-group">
