--- a/backend/src/app/posts/new-post/new-post.component.html
+++ b/backend/src/app/posts/new-post/new-post.component.html
@@ -50,7 +50,22 @@
 
         <div class="form-group">
           <label>Post Image</label>
-          <input type="file" class="form-control"/>
+          <img [src]="imgSrc" class="form-control img-fluid img-preview"/>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">Upload</span>
+            </div>
+            <div class="custom-file">
+              <input
+                type="file"
+                class="custom-file-input"
+                aria-describedby="inputGroupFileAddon01"
+                accept="image/*"
+                (change)="showPreview($event)"
+              />
+              <label class="custom-file-label">Choose file</label>
+            </div>
+          </div>
         </div>
       </div>
     </div>
