Backend - Uploading Image to Firebase

--- a/backend/src/app/posts/new-post/new-post.component.html
+++ b/backend/src/app/posts/new-post/new-post.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <form [formGroup]="postForm">
+  <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
     <div class="row">
       <div class="col-md-7">
         <div class="card shadow-effect">
@@ -101,7 +101,7 @@
             }"
           >
             <option value="" disabled>Please select a category</option>
-            <option *ngFor="let category of categories">
+            <option *ngFor="let category of categories" value="{{category.id}}-{{category.data.category}}">
               {{ category.data.category }}
             </option>
           </select>
