--- a/backend/src/app/posts/all-post/all-post.component.html
+++ b/backend/src/app/posts/all-post/all-post.component.html
@@ -49,7 +49,7 @@
               <td>{{ post.data.category.category }}</td>
               <td>{{ post.data.createdAt.toMillis() | date }}</td>
               <td>
-                <div class=" d-inline-flex justify-content-between">
+                <div class="d-inline-flex justify-content-between">
                   <button
                     [queryParams]="{ id: post.id }"
                     class="btn btn-warning btn-sm d-block"
@@ -57,11 +57,27 @@
                   >
                     Edit
                   </button>
-                  <button (click)="onDelete(post.data.postImgPath, post.id)" class="btn btn-danger btn-sm ml-2 d-block">
+                  <button
+                    (click)="onDelete(post.data.postImgPath, post.id)"
+                    class="btn btn-danger btn-sm ml-2 d-block"
+                  >
                     Delete
                   </button>
+                  <button
+                    (click)="onFeatured(post.id, true)"
+                    *ngIf="!post.data.isFeatured"
+                    class="btn btn-success btn-sm ml-2 d-block"
+                  >
+                    Mark Featured
+                  </button>
+                  <button
+                    (click)="onFeatured(post.id, false)"
+                    *ngIf="post.data.isFeatured"
+                    class="btn btn-info btn-sm ml-2 d-block"
+                  >
+                    Remove Featured
+                  </button>
                 </div>
-
               </td>
             </tr>
             </tbody>
