--- a/backend/src/app/auth/login/login.component.html
+++ b/backend/src/app/auth/login/login.component.html
@@ -8,16 +8,50 @@
             <p>Please login to your account to post a new blog</p>
           </div>
 
-          <form>
+          <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm.value)">
             <div class="form-group">
-              <input class="form-control" placeholder="Email" type="email"/>
+              <input
+                #Email="ngModel"
+                [ngClass]="{ 'is-invalid': Email.touched && Email.invalid }"
+                class="form-control"
+                email
+                name="email"
+                ngModel
+                placeholder="Email"
+                required
+                type="email"
+              />
+              <div
+                *ngIf="Email.touched && Email.invalid"
+                class="alert alert-danger"
+              >
+                <div *ngIf="Email.errors?.required">Email is required!</div>
+                <div *ngIf="Email.errors?.email">Email is not valid!</div>
+              </div>
             </div>
 
             <div class="form-group">
-              <input class="form-control" placeholder="Password" type="password"/>
+              <input
+                #Password="ngModel"
+                [ngClass]="{
+                  'is-invalid': Password.touched && Password.invalid
+                }"
+                class="form-control"
+                name="password"
+                ngModel
+                placeholder="Password"
+                required
+                type="password"
+              />
+              <div
+                *ngIf="Password.touched && Password.invalid"
+                class="alert alert-danger"
+              >
+                Email is required!
+              </div>
             </div>
 
-            <button class="btn btn-info btn-block btn-theme">Login</button>
+            <button [disabled]="loginForm.invalid" class="btn btn-info btn-block btn-theme">Login</button>
           </form>
         </div>
       </div>
