--- a/backend/src/app/layouts/header/header.component.html
+++ b/backend/src/app/layouts/header/header.component.html
@@ -2,4 +2,11 @@
   <div class="container justify-content-center">
     <a class="site-logo" href="#">ANG_BLOG</a>
   </div>
+
+  <div class="container justify-content-center">
+    <a class="mr-3" href="#">{{ userEmail }}</a>
+    <button class="btn btn-info btn-sm bg-secondary-theme text-theme-primary">
+      Logout
+    </button>
+  </div>
 </header>
