--- a/backend/src/styles.css
+++ b/backend/src/styles.css
@@ -47,7 +47,7 @@ body {
 }
 
 .text-theme-primary {
-  color: var(--primary-color);
+  color: var(--primary-color) !important;
 }
 
 input[type="text"],
