Backend - Auth Guard & Fixed Bugs Loout

--- a/backend/src/app/layouts/header/header.component.html
+++ b/backend/src/app/layouts/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="site-logo" href="#">ANG_BLOG</a>
   </div>
 
-  <div *ngIf="isLoggedIn$ | async" class="container justify-content-center">
+  <div *ngIf="isLoggedIn$" class="container justify-content-center">
     <a class="mr-3" href="#">{{ userEmail }}</a>
     <button
       (click)="onLogout()"
