--- a/frontend/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/frontend/src/app/layouts/category-navbar/category-navbar.component.html
@@ -1,18 +1,9 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <div class="collapse navbar-collapse justify-content-center">
-      <ul class="navbar-nav">
+      <ul *ngFor="let category of categoriesArray" class="navbar-nav">
         <li class="nav-item ml-3">
-          <a class="nav-link" href="#">Design</a>
-        </li>
-        <li class="nav-item ml-3">
-          <a class="nav-link" href="#">Inspiration</a>
-        </li>
-        <li class="nav-item ml-3">
-          <a class="nav-link" href="#">Sports</a>
-        </li>
-        <li class="nav-item ml-3">
-          <a class="nav-link" href="#">Politics</a>
+          <a class="nav-link" href="#">{{category.data.category}}</a>
         </li>
       </ul>
     </div>
