--- a/frontend/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/frontend/src/app/layouts/category-navbar/category-navbar.component.html
@@ -3,7 +3,8 @@
     <div class="collapse navbar-collapse justify-content-center">
       <ul *ngFor="let category of categoriesArray" class="navbar-nav">
         <li class="nav-item ml-3">
-          <a class="nav-link" href="#">{{category.data.category}}</a>
+          <a [routerLink]="['/category',category.data.category, category.id]"
+             class="nav-link">{{category.data.category}}</a>
         </li>
       </ul>
     </div>
