--- a/frontend/src/app/pages/single-category/single-category.component.html
+++ b/frontend/src/app/pages/single-category/single-category.component.html
@@ -1,29 +1,14 @@
 <div class="bg-theme p-5">
   <div class="container">
-    <h1 class="text-white">GENERAL KNOWLEDGE</h1>
+    <h1 class="text-white">{{categoryObj.category}}</h1>
     <p class="text-white">Lorem ipsum dolor sit amet consectetur. Nunc semper rhoncus ultrices</p>
   </div>
 </div>
 
 <div class="container mt-5 mb-5">
   <div class="row">
-    <div class="col-md-4 mb-4">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mb-4">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mb-4">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mb-4">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mb-4">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mb-4">
-      <app-post-card></app-post-card>
+    <div *ngFor="let post of postsArray" class="col-md-4 mb-4">
+      <app-post-card [postData]="post"></app-post-card>
     </div>
   </div>
 </div>
