--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand-lg fixed-top bg-white">
   <div class="container justify-content-center">
-    <a class="site-logo" href="#">ANG_BLOG</a>
+    <a class="site-logo" routerLink="/">ANG_BLOG</a>
   </div>
 </header>
