--- a/frontend/src/app/layouts/post-card/post-card.component.html
+++ b/frontend/src/app/layouts/post-card/post-card.component.html
@@ -1,20 +1,28 @@
-<div *ngIf="postData" class="card shadow-effect">
+<div
+  *ngIf="postData"
+  [routerLink]="['/post', postData.id]"
+  class="card shadow-effect"
+>
   <img
     alt="post image"
     class="card-img-top img-custom"
-    src="{{postData?.data.postImgPath}}"
+    src="{{ postData?.data.postImgPath }}"
   />
   <div class="card-body">
-    <small class="bg-light text-danger text-center">{{postData?.data.category.category}}</small>
-    <small class="bg-light text-success text-center ml-3">Featured</small>
-    <small class="bg-light text-info text-center ml-3">Views - {{postData?.data.views}}</small>
+    <small class="bg-light text-danger text-center">{{
+      postData?.data.category.category
+      }}</small>
+    <small *ngIf="postData.data.isFeatured" class="bg-light text-success text-center ml-3">Featured</small>
+    <small class="bg-light text-info text-center ml-3"
+    >Views - {{ postData?.data.views }}</small
+    >
 
-    <h5 class="mt-1">{{postData?.data.title}}</h5>
+    <h5 class="mt-1">{{ postData?.data.title }}</h5>
     <p>
-      {{postData?.data.excerpt}}
+      {{ postData?.data.excerpt }}
     </p>
     <small class="bg-light text-warning text-center ml-sm-0 ml-md-2">
-      LAST UPDATED - {{postData?.data.createdAt.toMillis() | date}}
+      LAST UPDATED - {{ postData?.data.createdAt.toMillis() | date }}
     </small>
   </div>
 </div>
