--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -1,6 +1,6 @@
 .featured-section {
-  padding-left: 100px;
-  padding-right: 100px;
+  /*padding-left: 100px;*/
+  /*padding-right: 100px;*/
   padding-bottom: 130px;
   background-color: var(--primary-color);
 }
