Frontend - Fixing Responsive For SubScription Form

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,10 +6,12 @@
   <router-outlet></router-outlet>
 </div>
 
-<!--<div class="container mt-5 mb-5">-->
-<!--  <div class="row justify-content-center">-->
-<!--    <app-subscription-form></app-subscription-form>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="container mt-5 mb-5">
+  <div class="row justify-content-center">
+    <div class="col-md-12">
+      <app-subscription-form></app-subscription-form>
+    </div>
+  </div>
+</div>
 
 <app-footer></app-footer>
