--- a/frontend/src/app/subscription-form/subscription-form.component.css
+++ b/frontend/src/app/subscription-form/subscription-form.component.css
@@ -1,10 +1,9 @@
 .card {
   background-color: var(--secondary-color);
-  width: 1200px;
 }
 
 .subs-text {
-  width: 500px;
+  width: 100%;
 }
 
 input[type="text"],
