--- a/frontend/src/app/comments/comment-list/comment-list.component.html
+++ b/frontend/src/app/comments/comment-list/comment-list.component.html
@@ -3,69 +3,30 @@
     <h4 class="mt-3 mb-3">Comments (12,345)</h4>
 
     <!-- Comments Section   -->
-    <div class="comment-box mt-3">
-      <h6 class="mb-0">John Doe</h6>
-      <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
+    <div *ngFor="let comment of commentsArray" class="comment-box mt-3">
+      <h6 class="mb-0">{{comment.data.name}}</h6>
+      <small class="text-danger">LAST UPDATED - {{comment.data.createdAt.toMillis() | date}}</small>
 
       <div class="mt-3 mb-3">
-        Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
-        mauris purus non. Interdum tellus ornare enim proin nulla tristique
-        ullamcorper nibh.
+        {{comment.data.comment}}
       </div>
 
       <a class="mt-1" href="#">Reply</a>
       <a class="mt-1 ml-3" href="#">View Reply</a>
 
       <!--  Replies Section   -->
-      <div class="ml-4 mt-5">
-        <div class="mb-3">
-          <h6 class="mb-0">John Doe</h6>
-          <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
+      <!--      <div class="ml-4 mt-5">-->
+      <!--        <div class="mb-3">-->
+      <!--          <h6 class="mb-0">John Doe</h6>-->
+      <!--          <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>-->
 
-          <div class="mt-2 mb-5">
-            Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
-            mauris purus non. Interdum tellus ornare enim proin nulla tristique
-            ullamcorper nibh.
-          </div>
-        </div>
-        <div class="mb-3">
-          <h6 class="mb-0">John Doe</h6>
-          <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
-
-          <div class="mt-2 mb-3">
-            Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
-            mauris purus non. Interdum tellus ornare enim proin nulla tristique
-            ullamcorper nibh.
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="comment-box mt-3">
-      <h6 class="mb-0">John Doe</h6>
-      <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
-
-      <div class="mt-3 mb-3">
-        Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
-        mauris purus non. Interdum tellus ornare enim proin nulla tristique
-        ullamcorper nibh.
-      </div>
-
-      <a class="mt-1" href="#">Reply</a>
-      <a class="mt-1 ml-3" href="#">View Reply</a>
-    </div>
-    <div class="comment-box mt-3">
-      <h6 class="mb-0">John Doe</h6>
-      <small class="text-danger">LAST UPDATED - SEP 20, 2023</small>
-
-      <div class="mt-3 mb-3">
-        Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam
-        mauris purus non. Interdum tellus ornare enim proin nulla tristique
-        ullamcorper nibh.
-      </div>
-
-      <a class="mt-1" href="#">Reply</a>
-      <a class="mt-1 ml-3" href="#">View Reply</a>
+      <!--          <div class="mt-2 mb-5">-->
+      <!--            Lorem ipsum dolor sit amet consectetur. Volutpat pellentesque aliquam-->
+      <!--            mauris purus non. Interdum tellus ornare enim proin nulla tristique-->
+      <!--            ullamcorper nibh.-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
     </div>
   </div>
 </div>
