--- a/frontend/src/app/pages/contact-us/contact-form/contact-form.component.html
+++ b/frontend/src/app/pages/contact-us/contact-form/contact-form.component.html
@@ -1,8 +1,10 @@
-<form>
+<form #contactForm='ngForm' (ngSubmit)="onSubmit(contactForm.value)">
   <div class="form-group">
     <label>Name</label>
     <input
       class="form-control"
+      name="name"
+      ngModel
       placeholder="Enter your name here"
       type="text"
     />
@@ -12,17 +14,21 @@
     <label>Email</label>
     <input
       class="form-control"
+      name="email"
+      ngModel
       placeholder="Enter your email here"
       type="text"
     />
   </div>
 
   <div class="form-group">
-    <label>Comment</label>
+    <label>Message</label>
     <textarea
       class="form-control"
       cols="30"
-      placeholder="Add your comment here"
+      name="message"
+      ngModel
+      placeholder="Add your message here"
       rows="10"
     ></textarea>
   </div>
