Backend - Creating Contact Component

--- a/backend/src/app/dashboard/dashboard.component.html
+++ b/backend/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <!--    Category Sections-->
     <div class="col-md-6 mb-5">
       <div class="card shadow-effect">
         <div class="card-body text-center bg-secondary-theme" routerLink="categories">
@@ -9,6 +10,7 @@
         </div>
       </div>
     </div>
+    <!--    Posts Sections-->
     <div class="col-md-6 mb-5">
       <div class="card shadow-effect">
         <div class="card-body text-center bg-secondary-theme" routerLink="posts">
@@ -18,12 +20,23 @@
         </div>
       </div>
     </div>
+    <!--    Subscribers Sections-->
     <div class="col-md-6 mb-5">
       <div class="card shadow-effect">
         <div class="card-body text-center bg-secondary-theme" routerLink="subscriber">
           <h1 class="text-theme-primary mt-3"><i class="fa-solid fa-user"></i></h1>
           <h2 class="text-theme-primary">Subscribers</h2>
           <p>Manage your subscriber here</p>
+        </div>
+      </div>
+    </div>
+    <!--    Contact Sections-->
+    <div class="col-md-6 mb-5">
+      <div class="card shadow-effect">
+        <div class="card-body text-center bg-secondary-theme" routerLink="contact">
+          <h1 class="text-theme-primary mt-3"><i class="fa-solid fa-users"></i></h1>
+          <h2 class="text-theme-primary">Contacts</h2>
+          <p>Manage your contacts here</p>
         </div>
       </div>
     </div>
